--- a/index.html
+++ b/index.html
@@ -1,33 +1,48 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Games News</title>
+    <title>GameNexus</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="estilo.css" rel="stylesheet" />
   </head>
   <body>
-    <nav>
-      <h1>Game News</h1>
-      <a href="https://www.roblox.com/pt" target="_blank" class="linksHeader"
-        >Jogos</a
-      >
-      <a href="#" class="linksHeader">Noticias</a>
-      <a href="#" class="linksHeader">Eventos</a>
-      <a href="#" class="linksHeader">Códigos de Jogos</a>
-      <button type="button">Login</button>
-      <button type="button" id="botao1">Continuar</button>
+    <div class="container">
+    <nav role="navigation" aria-label="Main Navigation">
+      <h1 class="brand">GameNexus</h1>
+      <div class="nav-links" id="main-menu" role="menubar">
+        <a href="https://www.roblox.com/pt" target="_blank" class="linksHeader" role="menuitem">Jogos</a>
+        <a href="#" class="linksHeader is-active" aria-current="page" role="menuitem">Noticias</a>
+        <a href="#" class="linksHeader" role="menuitem">Eventos</a>
+        <a href="#" class="linksHeader" role="menuitem">Códigos de Jogos</a>
+      </div>
+      <button id="menuToggle" class="hamburger" aria-label="Abrir menu" aria-expanded="false" aria-controls="main-menu">☰</button>
+      <div class="auth">
+        <button type="button" class="login">Login</button>
+        <button type="button" id="botao1" class="cta">Continuar</button>
+      </div>
     </nav>
     <section>
       <!-- carrousel-->
-      <div class="jogosPrincipais">
+      <div class="jogosPrincipais hero" role="region" aria-label="Carrossel de Destaques">
         <img
-          src="/imagens/01-fortnite.png"
-          alt="Fortnite"
-          width="250px"
-          height="192px"
+          src="imagens/01-fortnite.png"
+          alt="Fortnite - destaque"
         />
         <div class="jogosPrincipaisInstalar">
-          <button type="button">instalar Fortinite</button>
+          <button type="button" aria-label="Instalar Fortnite">Instalar Fortnite</button>
         </div>
+        <button class="carousel-prev" aria-label="Slide anterior">‹</button>
+        <button class="carousel-next" aria-label="Próximo slide">›</button>
+        <ul class="carousel-indicators" aria-label="Indicadores do carrossel">
+          <li><button class="indicator active" aria-label="Slide 1" aria-current="true" data-index="0"></button></li>
+          <li><button class="indicator" aria-label="Slide 2" data-index="1"></button></li>
+          <li><button class="indicator" aria-label="Slide 3" data-index="2"></button></li>
+          <li><button class="indicator" aria-label="Slide 4" data-index="3"></button></li>
+          <li><button class="indicator" aria-label="Slide 5" data-index="4"></button></li>
+        </ul>
+        <div class="sr-only" id="hero-announcer" aria-live="polite">Fortnite - destaque</div>
       </div>
 
       <!-- noticias games -->
@@ -38,25 +53,21 @@
 
           <div class="jogosPrincipais">
             <img
-              src="/imagens/02-cs2.webp"
-              alt="cs2"
-              width="250px"
-              height="192px"
+              src="imagens/02-cs2.webp"
+              alt="CS2 - Counter Strike"
             />
             <div class="jogosPrincipaisInstalar">
-              <button type="button">instalar counter strike</button>
+              <button type="button" aria-label="Instalar CS2">Instalar CS2</button>
             </div>
           </div>
 
           <div class="jogosPrincipais">
             <img
-              src="/imagens/03-warframe.png"
-              alt="warframe"
-              width="250px"
-              height="192px"
+              src="imagens/03-warframe.png"
+              alt="Warframe - destaque"
             />
             <div class="jogosPrincipaisInstalar">
-              <button type="button">instalar warframe</button>
+              <button type="button" aria-label="Instalar Warframe">Instalar Warframe</button>
             </div>
           </div>
         </div>
@@ -65,25 +76,21 @@
           <h2>Filas competitivas</h2>
           <div class="jogosPrincipais">
             <img
-              src="/imagens/04-lol.webp"
-              alt="lol"
-              width="250px"
-              height="192px"
+              src="imagens/04-lol.webp"
+              alt="League of Legends"
             />
             <div class="jogosPrincipaisInstalar">
-              <button type="button">instalar league of legends</button>
+              <button type="button" aria-label="Instalar League of Legends">Instalar League</button>
             </div>
           </div>
 
           <div class="jogosPrincipais">
             <img
-              src="/imagens/05-valorant.jpg"
-              alt="valorant"
-              width="250px"
-              height="192px"
+              src="imagens/05-valorant.jpg"
+              alt="Valorant - destaque"
             />
             <div class="jogosPrincipaisInstalar">
-              <button type="button">instalar valorant</button>
+              <button type="button" aria-label="Instalar Valorant">Instalar Valorant</button>
             </div>
           </div>
         </div>
@@ -92,29 +99,54 @@
           <h2>criatividade mundo aberto</h2>
           <div class="jogosPrincipais">
             <img
-              src="/imagens/06-roblox.webp"
-              alt="roblox"
-              width="250px"
-              height="192px"
+              src="imagens/06-roblox.webp"
+              alt="Roblox - destaque"
             />
             <div class="jogosPrincipaisInstalar">
-              <button type="button">instalar roblox</button>
+              <button type="button" aria-label="Instalar Roblox">Instalar Roblox</button>
             </div>
           </div>
 
           <div class="jogosPrincipais">
             <img
-              src="/imagens/07-minecraft.avif"
-              alt="07-minecraft"
-              width="250px"
-              height="192px"
+              src="imagens/07-minecraft.avif"
+              alt="Minecraft - destaque"
             />
             <div class="jogosPrincipaisInstalar">
-              <button type="button">instalar 07-minecraft</button>
+              <button type="button" aria-label="Instalar Minecraft">Instalar Minecraft</button>
             </div>
           </div>
         </div>
       </main>
     </section>
+
+    <footer class="site-footer" role="contentinfo">
+      <div class="footer-inner">
+        <div class="footer-col footer-brand">
+          <h3>GameNexus</h3>
+          <p>Plataforma de notícias e lançamentos de jogos. Todos os direitos reservados.</p>
+        </div>
+        <div class="footer-col footer-links">
+          <h4>Links</h4>
+          <ul>
+            <li><a href="#">Jogos</a></li>
+            <li><a href="#">Noticias</a></li>
+            <li><a href="#">Eventos</a></li>
+            <li><a href="#">Contato</a></li>
+          </ul>
+        </div>
+        <div class="footer-col footer-social">
+          <h4>Siga</h4>
+          <div class="social-icons" aria-hidden="false">
+            <a href="#" aria-label="Twitter">T</a>
+            <a href="#" aria-label="YouTube">Y</a>
+            <a href="#" aria-label="Instagram">I</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+    </div>
+
+    <script src="script.js"></script>
   </body>
-</html>
+</html> 
